yaml/ingress/ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:  
    kubernetes.io/ingress.class: alb    
    alb.ingress.kubernetes.io/target-type: ip    
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:940168446867:certificate/8881bf55-cfe1-4f57-8fba-a03e5082cdbb
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    #alb.ingress.kubernetes.io/actions.redirect-to-https: >
    #   {"Type":"redirect","RedirectConfig":{"Port":"443","Protocol":"HTTPS","StatusCode":"HTTP_302"}}
spec:
  rules:
  - host: www.heuncloud.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-svc
            port: 
              number: 80
